Fixed not showing Map

--- a/src/Pages/AppLayout.module.css
+++ b/src/Pages/AppLayout.module.css
@@ -1,6 +1,7 @@
 .app {
   height: 100vh;
   padding: 2.4rem;
+  background-color: var(--color-dark--2);
   overscroll-behavior-y: none;
   display: flex;
   position: relative;
