--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -5,8 +5,11 @@
   position: relative;
 }
 
-.map {
-  height: 100%;
+.leaflet-container {
+  margin: 20px;
+  height: 90vh;
+  width: 90%;
+  border-radius: 2rem;
 }
 
 /* Here we want to style classes that are coming from leaflet. So we want CSS Modules to give us the ACTUAL classnames, not to add some random ID to them, because then they won't match the classnames defined inside the map. The solution is to define these classes as GLOBAL */
